chore: Add JavaExec task to run the SDLFoo
Doing so I faced the following Gradle issues
* https://github.com/gradle/gradle/issues/18168
* https://github.com/gradle/gradle/issues/16791